--- a/styles/home/navbar/navbar.css
+++ b/styles/home/navbar/navbar.css
@@ -15,7 +15,6 @@
   transform: perspective(1000px);
   animation: autoRun 30s linear infinite;
 }
-
 @keyframes autoRun {
   from {
     transform: perspective(1000px) rotateX(-15deg) rotateY(0deg);
@@ -31,17 +30,21 @@
     rotateY(calc( (var(--position) - 1) * (360 / var(--quantity)) * 1deg ))
     translateZ(550px);
 }
-.banner .slider .item img{
+.banner .slider .item img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+
+  border-radius: 3px;
 
   cursor: pointer;
 
   transition: all .4s ease-in-out;
 }
 .banner .slider .item img:hover {
-  scale: 1.1;
+  width: 110%;
+  height: 110%;
+  transform: translate(-5%, -5%);
 
   transition: all .2s ease-in-out;
 }
@@ -67,7 +70,7 @@
   padding-left: .5rem;
 
   background: linear-gradient(-10deg, var(--main-background-color), var(--main-text-color), var(--main-text-color), var(--main-text-color), var(--main-background-color));
-  background-clip: text;
+  -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 .banner .nav-content .info {
@@ -80,7 +83,6 @@
 .banner .nav-content .info h2{
   font-size: 3rem;
 }
-
 
 
 /* || RESPOSIVENESS || */
@@ -96,7 +98,6 @@
     width: calc(200px * 1.30);
     height: calc(250px * 1.30);
     left: calc(50% - 130px);
-    transition: all 1s ease;
   }
 }
 @media screen and (max-width:2561px) {
@@ -113,9 +114,6 @@
 }
 @media screen and (max-width:1920px) {
   /* makes everything 10% smaller than initial size */
-  .banner{
-    height: 100vh;
-  }
   .banner .slider .item {  transform: 
     rotateY(calc( (var(--position) - 1) * (360 / var(--quantity)) * 1deg ))
     translateZ(calc(550px * .90));}
@@ -125,27 +123,17 @@
     height: calc(250px * .90);
     left: calc(50% - 90px);
   }
-  .content {
-    width: 1400px;
-  }
 }
 @media screen and (max-width:1600px) {
   /* makes everything 25% smaller than initial size */
-  .banner{
-    height: 48rem;
-  }
   .banner .slider .item {  transform: 
     rotateY(calc( (var(--position) - 1) * (360 / var(--quantity)) * 1deg ))
-    translateZ(calc(550px * 0.75));
-  }
+    translateZ(calc(550px * 0.75));}
   
   .banner .slider {
     width: calc(200px * 0.75);
     height: calc(250px * 0.75);
     left: calc(50% - 75px);
-  }
-  .content {
-    width: 1100px;
   }
 
   /* changes font-size accordingly */
@@ -163,12 +151,6 @@
 }
 @media screen and (max-width:1300px) {
   /* makes everything 35% smaller than initial size */
-  .banner{
-    height: 40rem;
-  }
-  .slider {
-    top: 12.5% !important;
-  }
   .banner .slider .item {  transform: 
     rotateY(calc( (var(--position) - 1) * (360 / var(--quantity)) * 1deg ))
     translateZ(calc(550px * 0.65));}
@@ -177,10 +159,6 @@
     width: calc(200px * 0.65);
     height: calc(250px * 0.65);
     left: calc(50% - 65px);
-  }
-
-  .content {
-    width: 900px;
   }
 
   /* changes font-size accordingly */
@@ -198,9 +176,6 @@
 }
 @media screen and (max-width:1000px) {
   /* makes everything 45% smaller than initial size */
-  .banner{
-    height: 32rem;
-  }
   .banner .slider .item {  transform: 
     rotateY(calc( (var(--position) - 1) * (360 / var(--quantity)) * 1deg ))
     translateZ(calc(550px * 0.55));}
@@ -211,9 +186,6 @@
     left: calc(50% - 55px);
   }
 
-  .content {
-    width: 800px;
-  }
   /* changes font-size accordingly */
   .banner .nav-content{
     width: 800px;
@@ -229,12 +201,6 @@
 }
 @media screen and (max-width:850px) {
   /* makes everything 60% smaller than initial size */
-  .banner{
-    height: 25rem;
-  }
-  .slider {
-    top: 15% !important;
-  }
   .banner .slider .item {  transform: 
     rotateY(calc( (var(--position) - 1) * (360 / var(--quantity)) * 1deg ))
     translateZ(calc(550px * 0.40));}
@@ -245,31 +211,22 @@
     left: calc(50% - 40px);
   }
 
-  .content {
-    width: 500px;
-  }
-
   /* changes font-size accordingly */
   .banner .nav-content{
-    width: 500px;
+    width: 362px;
     top: 18rem;
+    justify-content: end;
   }
   .banner .nav-content h1 {
-    font-size: 3rem;
-    line-height:2.75rem;
+    font-size: 4rem;
+    line-height: 4rem;
   }
   .banner .nav-content .info h2{
     font-size: 1.5rem;
   }
-  .banner .nav-content .info p {
-    font-size: .75rem;
-  }
 }
 @media screen and (max-width:550px) {
   /* makes everything 65% smaller than initial size */
-  .banner{
-    height: 23rem;
-  }
   .banner .slider .item {  transform: 
     rotateY(calc( (var(--position) - 1) * (360 / var(--quantity)) * 1deg ))
     translateZ(calc(550px * 0.35));}
@@ -280,57 +237,47 @@
     left: calc(50% - 35px);
   }
 
-  .content {
-    width: 450px;
-  }
-
   /* changes font-size accordingly */
   .banner .nav-content{
-    width: 450px;
+    width: 319px;
     top: 17rem;
   }
   .banner .nav-content h1 {
-    font-size: 3rem;
-    line-height: 2.5rem;
+    font-size: 3.5rem;
+    line-height: 3rem;
   }
   .banner .nav-content .info h2{
-    font-size: 1.25rem;
+    font-size: 1.35rem;
   }
   .banner .nav-content .info p {
-    font-size: .6rem;
+    font-size: .75rem;
   }
 }
 @media screen and (max-width:450px) {
   /* makes everything 70% smaller than initial size */
-  .banner{
-    height: 22rem;
-  }
   .banner .slider .item {  transform: 
     rotateY(calc( (var(--position) - 1) * (360 / var(--quantity)) * 1deg ))
     translateZ(calc(550px * 0.30));}
   
   .banner .slider {
-    width: calc(200px * 0.35);
-    height: calc(250px * 0.35);
+    width: calc(200px * 0.30);
+    height: calc(250px * 0.30);
     left: calc(50% - 30px);
   }
 
-  .content {
-    width: 350px;
-  }
   /* changes font-size accordingly */
   .banner .nav-content{
-    width: 350px;
+    width: 319px;
     top: 16rem;
   }
   .banner .nav-content h1 {
-    font-size: 2.5rem;
-    line-height: 2rem;
+    font-size: 3.5rem;
+    line-height: 3rem;
   }
   .banner .nav-content .info h2{
-    font-size: 1rem;
+    font-size: 1.35rem;
   }
   .banner .nav-content .info p {
-    font-size: .5rem;
+    font-size: .75rem;
   }
 }
